--- a/automation1App/src/Makefile
+++ b/automation1App/src/Makefile
@@ -10,9 +10,9 @@ LIBRARY_IOC = Automation1
 SRCS += Automation1MotorAxis.cpp
 SRCS += Automation1MotorController.cpp
 
-automation1compiler_DIR += /home/garrett/EPICS/synApps_6_1/support/motor-R7-1/bin/linux-x86_64
+automation1compiler_DIR += $(MOTOR_AUTOMATION1)/automation1Sup/Lib
 Automation1_LIBS += automation1compiler
-automation1c_DIR += /home/garrett/EPICS/synApps_6_1/support/motor-R7-1/bin/linux-x86_64
+automation1c_DIR += $(MOTOR_AUTOMATION1)/automation1Sup/Lib
 Automation1_LIBS += automation1c
 
 DBD += devAutomation1Motor.dbd
