Added record to track axis velocity.

--- a/automation1App/Db/Makefile
+++ b/automation1App/Db/Makefile
@@ -13,6 +13,7 @@ include $(TOP)/configure/CONFIG
 
 
 DB += Automation1MotorController.template
+DB += Automation1MotorAxis.template
 
 
 #----------------------------------------------------
