--- a/automation1App/Db/Automation1MotorController.template
+++ b/automation1App/Db/Automation1MotorController.template
@@ -6,9 +6,9 @@
 ##############################################################
 # Acknowledge and clear faults on all axes and tasks.
 ##############################################################
-record(bo, "$(P):AckAll")
+record(bo, "$(P)AckAll")
 {
-	field(DESC, "Clear axis and task faults")
+    field(DESC, "Clear axis and task faults")
     field(DTYP, "asynInt32")
     field(OUT,  "@asyn($(PORT),0,$(TIMEOUT=4))AUTOMATION1_C_ACKALL")
 }
