Install all the header files that are present in the Include dir

--- a/automation1Sup/Makefile
+++ b/automation1Sup/Makefile
@@ -5,19 +5,7 @@ include $(TOP)/configure/CONFIG
 #  ADD MACRO DEFINITIONS AFTER THIS LINE
 #=============================
 
-INC += Include/Automation1.h
-INC += Include/Automation1Command.h
-INC += Include/Automation1Controller.h
-INC += Include/Automation1DataCollection.h
-INC += Include/Automation1DataSignal.h
-INC += Include/Automation1Enum.h
-INC += Include/Automation1Error.h
-INC += Include/Automation1Parameter.h
-INC += Include/Automation1ParameterId.h
-INC += Include/Automation1Status.h
-INC += Include/Automation1StatusItem.h
-INC += Include/Automation1Task.h
-INC += Include/Automation1Files.h
+INC += $(patsubst ../%, %, $(wildcard ../Include/*.h))
 
 BIN_INSTALLS += ../Lib/libautomation1c.so
 BIN_INSTALLS += ../Lib/libautomation1compiler.so
