Changes from @LeeYangLBLBCS to Makefiles to allow building on Windows
Source: https://github.com/epics-motor/motorAutomation1/issues/17

--- a/automation1App/src/Makefile
+++ b/automation1App/src/Makefile
@@ -17,8 +17,17 @@ else
 automation1compiler_DIR += $(MOTOR)/bin/$(EPICS_HOST_ARCH)
 automation1c_DIR += $(MOTOR)/bin/$(EPICS_HOST_ARCH)
 endif
-Automation1_LIBS += automation1compiler
-Automation1_LIBS += automation1c
+
+ifeq (win32-x86, $(findstring win32-x86, $(T_A)))
+	Automation1_LIBS += automation1c
+else ifeq (windows-x64, $(findstring windows-x64, $(T_A)))
+	Automation1_LIBS += automation1c64
+else ifeq (linux-x86_64, $(findstring linux-x86_64, $(T_A)))
+	Automation1_LIBS += automation1compiler
+	Automation1_LIBS += automation1c
+endif
+
+
 
 DBD += devAutomation1Motor.dbd
 
