Also use PROD_SYS_LIB for Linux in the automation1App/src/Makefile

--- a/automation1App/src/Makefile
+++ b/automation1App/src/Makefile
@@ -23,15 +23,13 @@ automation1c_DIR += $(MOTOR)/bin/$(EPICS_HOST_ARCH)
 endif
 
 ifeq (win32-x86, $(findstring win32-x86, $(T_A)))
-	Automation1_LIBS += automation1c
+	PROD_LIBS += automation1c
 else ifeq (windows-x64, $(findstring windows-x64, $(T_A)))
-	Automation1_LIBS += automation1c64
+	PROD_LIBS += automation1c64
 else ifeq (linux-x86_64, $(findstring linux-x86_64, $(T_A)))
-	Automation1_LIBS += automation1compiler
-	Automation1_LIBS += automation1c
+	PROD_SYS_LIBS += automation1compiler
+	PROD_SYS_LIBS += automation1c
 endif
-
-
 
 DBD += devAutomation1Motor.dbd
 
