Use OS_CLASS to detect Linux target architectures, to avoid breaking builds for custom linux architures

--- a/automation1App/src/Makefile
+++ b/automation1App/src/Makefile
@@ -27,9 +27,13 @@ ifeq (win32-x86, $(findstring win32-x86, $(T_A)))
 	Automation1_LIBS += automation1c
 else ifeq (windows-x64, $(findstring windows-x64, $(T_A)))
 	Automation1_LIBS += automation1c64
-else ifeq (linux-x86_64, $(findstring linux-x86_64, $(T_A)))
+# Use OS_CLASS check for linux to avoid breaking custom Linux arches
+else ifeq ($(OS_CLASS),Linux)
+ifeq (x86_64, $(findstring x86_64, $(T_A)))
 	Automation1_SYS_LIBS += automation1compiler
 	Automation1_SYS_LIBS += automation1c
+endif
+# End OS_CLASS=Linux
 endif
 
 DBD += devAutomation1Motor.dbd
