--- a/automation1Sup/Makefile
+++ b/automation1Sup/Makefile
@@ -15,9 +15,13 @@ else ifeq (windows-x64, $(findstring windows-x64, $(T_A)))
 	BIN_INSTALLS += ../Library/Windows/x64/Automation1C64.dll
 	LIB_INSTALLS += ../Library/Windows/x64/Automation1C64.lib
 	BIN_INSTALLS += ../Library/Windows/x64/Automation1Compiler64.dll
-else ifeq (linux-x86_64, $(findstring linux-x86_64, $(T_A)))
+# Use OS_CLASS check for linux to avoid breaking custom Linux arches
+else ifeq ($(OS_CLASS),Linux)
+ifeq (x86_64, $(findstring x86_64, $(T_A)))
 	LIB_INSTALLS += ../Library/Linux/x64/libautomation1c.so
 	LIB_INSTALLS += ../Library/Linux/x64/libautomation1compiler.so
+endif
+# End OS_CLASS=Linux
 endif
 
 #=============================
